kubernetes/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: app-db
  labels:
    app: app-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-db
  template:
    metadata:
      labels:
        app: app-db
    spec:
      containers:
        - name: mysql
          image: dhifannn/vprofiledb
          ports:
            - name: app-db-port
              containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
