kubernetes/mcdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-mc
  labels:
    app: app-mc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-mc
  template:
    metadata:
      labels:
        app: app-mc
    spec:
      containers:
        - name: app-mc
          image: memcached:latest
          ports:
            - name: app-mc-port
              containerPort: 11211
