kubernetes/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp
  labels:
    app: app
spec:
  selector:
    app: app
  ports:
  - port: 8080
    targetPort: app-port
    protocol: TCP
  type: ClusterIP
