kubernetes/dbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprodb
  labels:
    app: app-db
spec:
  selector:
    app: app-db
  ports:
  - port: 3306
    targetPort: app-db-port
    protocol: TCP
  type: ClusterIP
