kubernetes/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
  labels:
    app: app-mc
spec:
  selector:
    app: app-mc
  ports:
  - port: 11211
    targetPort: app-mc-port
    protocol: TCP
  type: ClusterIP
