kubernetes/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
  labels:
    app: app-rmq
spec:
  selector:
    app: app-rmq
  ports:
  - port: 5672
    targetPort: app-rmq-port
    protocol: TCP
  type: ClusterIP
