kubernetes/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: app.dhifops.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vproapp
                port:
                  number: 8080
